--- a/app/assets/templates/boards/index.jst.ejs
+++ b/app/assets/templates/boards/index.jst.ejs
@@ -1,9 +1,11 @@
 <h1>Board Index</h1>
-
-<% boards.forEach(function(board) { %>
-  <a href="#/api/boards/<%= board.id %>">
-    <li><%= board.escape('title') %></li>
-  </a>
-<% }) %>
+<ul>
+  <% boards.forEach(function(board) { %>
+    <li>
+      <a href="#/api/boards/<%= board.id %>"><%= board.escape('title') %></a>
+      <button class="delete" data-id="<%= board.id %>">Delete!</button>
+      </li>
+  <% }); %>
+</ul>
 
 <a href="#/api/boards/new">New Board</a>
